<resources>
    <string name="app_name">Portafolio App</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegreeApps">My Nanodegree Apps!</string>
    <string name="spotifyStreamerApp">Spotify Streamer</string>
    <string name="footbalScoresApp">Football Scores App</string>
    <string name="libraryApp">Library App</string>
    <string name="buildItBiggerApp">Build It Bigger</string>
    <string name="xyzReaderApp">XYZ Reader</string>
    <string name="myApp">Capstone: My Own App</string>
    <string name="toastMessage">This button will launch %1$s</string>
</resources>
